--- a/css/q.scss
+++ b/css/q.scss
@@ -12,7 +12,7 @@ $ghost-white: #f7fbfc;
 
 body {
   // background-color: $rich-black;
-  background-image: url('/img/bg.jpg');
+  background-image: url('/img/bg_small.jpg');
   color: $ghost-white;
   font-family: $main-font;
   font-size: 16px;
