--- a/css/q.scss
+++ b/css/q.scss
@@ -1,16 +1,21 @@
-//
 @import url('https://fonts.googleapis.com/css?family=Quicksand');
 // @import url('https://fonts.googleapis.com/css?family=Oswald');
 // @import url('https://fonts.googleapis.com/css?family=Playfair+Display');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300');
+//@import url('https://fonts.googleapis.com/css?family=Alegreya+Sans:100');
 
 $main-font: 'Quicksand', sans-serif;
 $header-font: 'Open Sans Condensed', sans-serif;
+//$main-font: 'Alegreya Sans', sans-serif;
 
 $rich-black: #0a0d1d;
 $ghost-white: #f7fbfc;
+$gray: #bbbbbb;
 $funky-magenta: #f71559;
 $bg-avg: #161816;
+$funky-purple: #3a243b;
+
+$ease-in-out: cubic-bezier(.42, 0, .58, 1);
 
 body {
   background-color: $bg-avg;
@@ -67,7 +72,7 @@ h4,
 h5,
 h6 {
   font-family: $header-font;
-  font-weight: 300;
+  font-weight: 100;
   margin-bottom: 1rem;
   margin-top: 2rem;
 }
@@ -99,7 +104,7 @@ h1 {
 a {
   color: $funky-magenta;
   text-decoration: none;
-  transition: all 420ms cubic-bezier(.42, 0, .58, 1);
+  transition: color 420ms $ease-in-out;
 
   &:hover {
     color: $ghost-white;
@@ -195,5 +200,39 @@ label {
   .title {
     height: 63px;
     padding-top: 37px;
+  }
+}
+
+span.tooltip {
+  outline: none;
+  padding-right: 0.4rem;
+
+  strong {
+    line-height: 30px;
+  }
+
+  span {
+    z-index: 10;
+    opacity: 0;
+    position: absolute;
+    display: inline;
+    padding: 0.3rem 0.6rem;
+    margin: -0.2rem 0 0 0.3rem;
+  }
+
+  &:hover {
+    text-decoration: none;
+
+    span {
+      font-size: 0.8rem;
+      color: $ghost-white;
+      border: 1px solid $bg-avg;
+      background-color: $funky-purple;
+      border-radius: 4px;
+      box-shadow: 0.2rem 0.2rem 0.4rem $bg-avg;
+
+      opacity: 0.95;
+      transition: opacity 420ms $ease-in-out;
+    }
   }
 }
