--- a/index.pug
+++ b/index.pug
@@ -29,17 +29,17 @@ html(lang='en')
     .header
       img.portrait(src='/img/portrait_bw.jpg')
       h1.title
-        a.anchor(id='section-mice-pápai', href='#mice-p%C3%A1pai', aria-hidden='true')
+        a.anchor(id='mice-pápai', href='#mice-p%C3%A1pai', aria-hidden='true')
           span.section
         | Mice Pápai
     .main-content
       .column
         h2
-          a#section-skills.anchor(href='#skills', aria-hidden='true')
+          a#skills.anchor(href='#skills', aria-hidden='true')
             span.section
           | Skills
         h3
-          a#section-proficient.anchor(href='#proficient', aria-hidden='true')
+          a#proficient.anchor(href='#proficient', aria-hidden='true')
             span.section
           | Proficient
         ul
@@ -48,7 +48,7 @@ html(lang='en')
           li Javascript
           li Linux (mainly debian)
         h3
-          a#section-comfortable.anchor(href='#comfortable', aria-hidden='true')
+          a#comfortable.anchor(href='#comfortable', aria-hidden='true')
             span.section
           | Comfortable
         ul
@@ -57,7 +57,7 @@ html(lang='en')
           li CSS (sass) / HTML5
           li MacOS
         h3
-          a#section-familiar.anchor(href='#familiar', aria-hidden='true')
+          a#familiar.anchor(href='#familiar', aria-hidden='true')
             span.section
           | Familiar
         ul
@@ -66,7 +66,7 @@ html(lang='en')
           li Nim
           li Windows
         h3
-          a#section-others.anchor(href='#others', aria-hidden='true')
+          a#others.anchor(href='#others', aria-hidden='true')
             span.section
           | Others
         ul
@@ -78,7 +78,7 @@ html(lang='en')
           li Adwords / Adsense / Analytics
           li Pharmacology / Biology
         h2
-          a#section-languages.anchor(href='#languages', aria-hidden='true')
+          a#languages.anchor(href='#languages', aria-hidden='true')
             span.section
           | Languages
         ul
@@ -86,7 +86,7 @@ html(lang='en')
           li Advanced: English
           li Basic: Spanish
         h3
-          a#section-libraries-and-frameworks.anchor(href='#libraries-and-frameworks', aria-hidden='true')
+          a#libraries-and-frameworks.anchor(href='#libraries-and-frameworks', aria-hidden='true')
             span.section
           | Libraries and Frameworks
         ul
@@ -102,7 +102,7 @@ html(lang='en')
           li Vue.js
       .column
         h2
-          a#section-experience.anchor(href='#experience', aria-hidden='true')
+          a#experience.anchor(href='#experience', aria-hidden='true')
             span.section
           | Experience
         ul
@@ -129,37 +129,37 @@ html(lang='en')
                 | Twitter, Instagram, Facebook, Google APIs
           li Gephi
         h3
-          a#section-endless-flux-labs.anchor(href='#endless-flux-labs', aria-hidden='true')
+          a#endless-flux-labs.anchor(href='#endless-flux-labs', aria-hidden='true')
             span.section
           |     Endless Flux Labs (2018-)
         h3
-          a#section-freelance-projects.anchor(href='#freelance-projects', aria-hidden='true')
+          a#freelance-projects.anchor(href='#freelance-projects', aria-hidden='true')
             span.section
           |     Freelance projects (2016-2018)
         h2
-          a#section-education.anchor(href='#education', aria-hidden='true')
+          a#education.anchor(href='#education', aria-hidden='true')
             span.section
           | Education
         h3
-          a#section-university.anchor(href='#university', aria-hidden='true')
+          a#university.anchor(href='#university', aria-hidden='true')
             span.section
           | University
         ul
           li Semmelweis University, Pharmacology (2015)
           li ELTE, Chemistry (2014)
         h3
-          a#section-high-school.anchor(href='#high-school', aria-hidden='true')
+          a#high-school.anchor(href='#high-school', aria-hidden='true')
             span.section
           | High School
         h4
-          a.anchor(id='section-2009-2014-szent-lászló-gimnázium', href='#2009-2014-szent-l%C3%A1szl%C3%B3-gimn%C3%A1zium', aria-hidden='true')
+          a.anchor(id='2009-2014-szent-lászló-gimnázium', href='#2009-2014-szent-l%C3%A1szl%C3%B3-gimn%C3%A1zium', aria-hidden='true')
             span.section
           | 2009-2014: Szent László Gimnázium
         ul
           li 2012-2014: Informatics
           li 2009-2012: Mass Communication
         h4
-          a#section-exit-exam-results.anchor(href='#exit-exam-results', aria-hidden='true')
+          a#exit-exam-results.anchor(href='#exit-exam-results', aria-hidden='true')
             span.section
           | Exit Exam Results
         input#show-exam-results.show-exam-results(type='checkbox')
