--- a/css/q.css
+++ b/css/q.css
@@ -221,3 +221,15 @@ span.tooltip:hover span {
   opacity: 0.98;
   transition: opacity 420ms cubic-bezier(0.42, 0, 0.58, 1);
 }
+
+.anchor .section {
+  position: absolute;
+  margin: 0 0 0 -1rem;
+  opacity: 0;
+}
+
+.anchor .section:hover {
+  color: #f71559;
+  opacity: 0.9;
+  transition: opacity 420ms cubic-bezier(0.42, 0, 0.58, 1);
+}
