--- a/index.pug
+++ b/index.pug
@@ -1,3 +1,6 @@
+include pug/anchor.pug
+include pug/tooltip.pug
+
 doctype html
 html(lang='en')
   head
@@ -29,18 +32,14 @@ html(lang='en')
     .header
       img.portrait(src='/img/portrait_bw.jpg')
       h1.title
-        a.anchor(id='mice-pápai', href='#mice-p%C3%A1pai', aria-hidden='true')
-          span.section
         | Mice Pápai
     .main-content
       .column
         h2
-          a#skills.anchor(href='#skills', aria-hidden='true')
-            span.section
+          +anchor('skills')
           | Skills
         h3
-          a#proficient.anchor(href='#proficient', aria-hidden='true')
-            span.section
+          +anchor('proficient')
           | Proficient
         ul
           li Python
@@ -48,8 +47,7 @@ html(lang='en')
           li Javascript
           li Linux (mainly debian)
         h3
-          a#comfortable.anchor(href='#comfortable', aria-hidden='true')
-            span.section
+          +anchor('comfortable')
           | Comfortable
         ul
           li Git
@@ -57,8 +55,7 @@ html(lang='en')
           li CSS (sass) / HTML5
           li MacOS
         h3
-          a#familiar.anchor(href='#familiar', aria-hidden='true')
-            span.section
+          +anchor('familiar')
           | Familiar
         ul
           li Java (Android)
@@ -66,8 +63,7 @@ html(lang='en')
           li Nim
           li Windows
         h3
-          a#others.anchor(href='#others', aria-hidden='true')
-            span.section
+          +anchor('other-skills')
           | Others
         ul
           li Analog / Digital Photography
@@ -78,16 +74,14 @@ html(lang='en')
           li Adwords / Adsense / Analytics
           li Pharmacology / Biology
         h2
-          a#languages.anchor(href='#languages', aria-hidden='true')
-            span.section
+          +anchor('languages')
           | Languages
         ul
           li Native: Hungarian
           li Advanced: English
           li Basic: Spanish
         h3
-          a#libraries-and-frameworks.anchor(href='#libraries-and-frameworks', aria-hidden='true')
-            span.section
+          +anchor('libraries-and-frameworks')
           | Libraries and Frameworks
         ul
           li Django, Flask and AIOHTTP
@@ -102,8 +96,7 @@ html(lang='en')
           li Vue.js
       .column
         h2
-          a#experience.anchor(href='#experience', aria-hidden='true')
-            span.section
+          +anchor('experience')
           | Experience
         ul
           li Recommender systems
@@ -129,38 +122,30 @@ html(lang='en')
                 | Twitter, Instagram, Facebook, Google APIs
           li Gephi
         h3
-          a#endless-flux-labs.anchor(href='#endless-flux-labs', aria-hidden='true')
-            span.section
-          |     Endless Flux Labs (2018-)
+          +anchor('endless-flux-labs')
+          | Endless Flux Labs (2018-)
         h3
-          a#freelance-projects.anchor(href='#freelance-projects', aria-hidden='true')
-            span.section
-          |     Freelance projects (2016-2018)
+          +anchor('freelance')
+          | Freelance projects (2016-2018)
         h2
-          a#education.anchor(href='#education', aria-hidden='true')
-            span.section
+          +anchor('education')
           | Education
         h3
-          a#university.anchor(href='#university', aria-hidden='true')
-            span.section
+          +anchor('university')
           | University
         ul
           li Semmelweis University, Pharmacology (2015)
           li ELTE, Chemistry (2014)
         h3
-          a#high-school.anchor(href='#high-school', aria-hidden='true')
-            span.section
+          +anchor('high-school')
           | High School
         h4
-          a.anchor(id='2009-2014-szent-lászló-gimnázium', href='#2009-2014-szent-l%C3%A1szl%C3%B3-gimn%C3%A1zium', aria-hidden='true')
-            span.section
           | 2009-2014: Szent László Gimnázium
         ul
           li 2012-2014: Informatics
           li 2009-2012: Mass Communication
         h4
-          a#exit-exam-results.anchor(href='#exit-exam-results', aria-hidden='true')
-            span.section
+          +anchor('exit-exam-results')
           | Exit Exam Results
         input#show-exam-results.show-exam-results(type='checkbox')
         label(for='show-exam-results')
@@ -223,7 +208,10 @@ html(lang='en')
               td(align='right') 4
               td(align='right') 2014
               td(align='left') -
-        h2 Contact
+        
+        h2 
+          +anchor('contact')
+          | Contact
         p
           a(href='tel:+36706325138')
             span.tooltip
