--- a/css/q.css
+++ b/css/q.css
@@ -88,6 +88,7 @@ a {
   color: #f71559;
   text-decoration: none;
   transition: color 420ms cubic-bezier(0.42, 0, 0.58, 1);
+  font-weight: 400;
 }
 
 a:hover {
@@ -113,7 +114,7 @@ a:hover {
 
 .column {
   width: 28rem;
-  margin: 0 0 4rem;
+  margin: 0 0 2rem;
   padding: 0 1rem;
   float: left;
 }
@@ -176,19 +177,6 @@ label {
   padding-top: 75px;
 }
 
-@media only screen and (max-width: 768px) {
-  .header {
-    height: 100px;
-  }
-  .portrait {
-    height: 100px;
-  }
-  .title {
-    height: 63px;
-    padding-top: 37px;
-  }
-}
-
 span.tooltip {
   outline: none;
   padding-right: 0.4rem;
@@ -205,6 +193,7 @@ span.tooltip span {
   display: inline;
   padding: 0.3rem 0.6rem;
   margin: -0.2rem 0 0 0.3rem;
+  max-width: 20rem;
 }
 
 span.tooltip:hover {
@@ -232,4 +221,20 @@ span.tooltip:hover span {
   color: #f71559;
   opacity: 0.9;
   transition: opacity 420ms cubic-bezier(0.42, 0, 0.58, 1);
+}
+
+@media only screen and (max-width: 768px) {
+  .header {
+    height: 100px;
+  }
+  .portrait {
+    height: 100px;
+  }
+  .title {
+    height: 63px;
+    padding-top: 37px;
+  }
+  span.tooltip span {
+    display: none;
+  }
 }
