--- a/index.pug
+++ b/index.pug
@@ -28,43 +28,41 @@ html(lang='en')
     link(rel='stylesheet', type='text/css', href='//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css')
     script(src='//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js')
     script(src='js/cookie.js')
+  
   body
     .header
       img.portrait(src='/img/portrait_bw.jpg')
       h1.title
         | Mice Pápai
+        
     .main-content
       .column
         h2
           +anchor('skills')
           | Skills
-        h3
-          +anchor('proficient')
-          | Proficient
+          
+        h3 Proficient
         ul
           li Python
           li PHP
           li Javascript
           li Linux (mainly debian)
-        h3
-          +anchor('comfortable')
-          | Comfortable
+          
+        h3 Comfortable
         ul
           li Git
           li SQL (MySQL, PostgreSQL)
           li CSS (sass) / HTML5
           li MacOS
-        h3
-          +anchor('familiar')
-          | Familiar
+          
+        h3 Familiar
         ul
           li Java (Android)
           li Racket (Scheme)
           li Nim
           li Windows
-        h3
-          +anchor('other-skills')
-          | Others
+          
+        h3 Others
         ul
           li Analog / Digital Photography
           li Photomanipulation
@@ -73,6 +71,7 @@ html(lang='en')
           li Laser cutting (GRBL)
           li Adwords / Adsense / Analytics
           li Pharmacology / Biology
+          
         h2
           +anchor('languages')
           | Languages
@@ -80,7 +79,8 @@ html(lang='en')
           li Native: Hungarian
           li Advanced: English
           li Basic: Spanish
-        h3
+          
+        h2
           +anchor('libraries-and-frameworks')
           | Libraries and Frameworks
         ul
@@ -94,6 +94,8 @@ html(lang='en')
           li OpenCV
           li Arcpy
           li Vue.js
+          
+          
       .column
         h2
           +anchor('experience')
@@ -101,46 +103,36 @@ html(lang='en')
         ul
           li Recommender systems
           li
-            span.tooltip
-              | Machine learning
-              span decision trees, neural nets, natural language analysis
+            +tooltip('Machine learning')
+              | decision trees, neural nets,
+              br
+              | natural language analysis
           li Data visualization / plots
           li Data mining / webscraping
           li Bioinformatics
           li Chrome extensions
           li Anki plugins
           li
-            span.tooltip
-              | Project Euler
-              span 951254_jAI9nTAjpXMOjMVTxGduFdADtBtdw95q
+            +tooltip('Project Euler')
+              | 951254_jAI9nTAjpXMOjMVTxGduFdADtBtdw95q
           li
-            span.tooltip
-              | APIs
-              span
-                | Last.fm, Reddit, Tumblr, Steem, Ebay, Flickr,
-                br
-                | Twitter, Instagram, Facebook, Google APIs
+            +tooltip('APIs')
+              | Last.fm, Reddit, Tumblr, Steem, Ebay, Flickr,
+              br
+              | Twitter, Instagram, Facebook, Google APIs
           li Gephi
-        h3
-          +anchor('endless-flux-labs')
-          | Endless Flux Labs (2018-)
-        h3
-          +anchor('freelance')
-          | Freelance projects (2016-2018)
+        h3 Endless Flux Labs (2018-)
+        h3 Freelance projects (2016-2018)
+        
         h2
           +anchor('education')
           | Education
-        h3
-          +anchor('university')
-          | University
+        h3 University
         ul
           li Semmelweis University, Pharmacology (2015)
           li ELTE, Chemistry (2014)
-        h3
-          +anchor('high-school')
-          | High School
-        h4
-          | 2009-2014: Szent László Gimnázium
+        h3 High School
+        h4 2009-2014: Szent László Gimnázium
         ul
           li 2012-2014: Informatics
           li 2009-2012: Mass Communication
@@ -214,16 +206,13 @@ html(lang='en')
           | Contact
         p
           a(href='tel:+36706325138')
-            span.tooltip
-              | Phone
-              span +36 70 632 51 38
+            +tooltip('Phone')
+              | +36 70 632 51 38
           br
           a(href='https://t.me/knockoutMice')
-            span.tooltip
-              | Telegram
-              span knockoutMice
+            +tooltip('Telegram')
+              | knockoutMice
           br
           a(href='mailto:qwhexz@gmail.com')
-            span.tooltip
-              | Email
-              span qwhexz@gmail.com
+            +tooltip('Email')
+              | qwhexz@gmail.com
