--- a/index.pug
+++ b/index.pug
@@ -7,7 +7,7 @@ html(lang='en')
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     title Mice Pápai CV
-    link(rel='stylesheet', type='text/css', href='css/q.min.css')
+    link(rel='stylesheet', type='text/css', href='css/q.min.css?v2')
     link(rel='apple-touch-icon', sizes='57x57', href='favicon/apple-icon-57x57.png')
     link(rel='apple-touch-icon', sizes='60x60', href='favicon/apple-icon-60x60.png')
     link(rel='apple-touch-icon', sizes='72x72', href='favicon/apple-icon-72x72.png')
