--- a/index.pug
+++ b/index.pug
@@ -1,218 +1,12 @@
-include pug/anchor.pug
-include pug/tooltip.pug
+include pug/mixin/anchor.pug
+include pug/mixin/tooltip.pug
 
 doctype html
 html(lang='en')
   head
-    meta(charset='utf-8')
-    meta(name='viewport', content='width=device-width, initial-scale=1')
-    title Mice Pápai CV
-    link(rel='stylesheet', type='text/css', href='css/q.min.css?v2')
-    link(rel='apple-touch-icon', sizes='57x57', href='favicon/apple-icon-57x57.png')
-    link(rel='apple-touch-icon', sizes='60x60', href='favicon/apple-icon-60x60.png')
-    link(rel='apple-touch-icon', sizes='72x72', href='favicon/apple-icon-72x72.png')
-    link(rel='apple-touch-icon', sizes='76x76', href='favicon/apple-icon-76x76.png')
-    link(rel='apple-touch-icon', sizes='114x114', href='favicon/apple-icon-114x114.png')
-    link(rel='apple-touch-icon', sizes='120x120', href='favicon/apple-icon-120x120.png')
-    link(rel='apple-touch-icon', sizes='144x144', href='favicon/apple-icon-144x144.png')
-    link(rel='apple-touch-icon', sizes='152x152', href='favicon/apple-icon-152x152.png')
-    link(rel='apple-touch-icon', sizes='180x180', href='favicon/apple-icon-180x180.png')
-    link(rel='icon', type='image/png', sizes='192x192', href='favicon/android-icon-192x192.png')
-    link(rel='icon', type='image/png', sizes='32x32', href='favicon/favicon-32x32.png')
-    link(rel='icon', type='image/png', sizes='96x96', href='favicon/favicon-96x96.png')
-    link(rel='icon', type='image/png', sizes='16x16', href='favicon/favicon-16x16.png')
-    link(rel='manifest', href='favicon/manifest.json')
-    meta(name='msapplication-TileColor', content='#161816')
-    meta(name='msapplication-TileImage', content='/favicon/ms-icon-144x144.png')
-    meta(name='theme-color', content='#161816')
-    link(rel='stylesheet', type='text/css', href='//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css')
-    script(src='//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js')
-    script(src='js/cookie.js')
-  
+    include pug/head.pug
   body
     .header
-      img.portrait(src='/img/portrait_bw.jpg')
-      h1.title
-        | Mice Pápai
-        
+      include pug/body-header.pug
     .main-content
-      .column
-        h2
-          +anchor('skills')
-          | Skills
-          
-        h3 Proficient
-        ul
-          li Python
-          li PHP
-          li Javascript
-          li Linux (mainly debian)
-          
-        h3 Comfortable
-        ul
-          li Git
-          li SQL (MySQL, PostgreSQL)
-          li CSS (sass) / HTML5
-          li MacOS
-          
-        h3 Familiar
-        ul
-          li Java (Android)
-          li Racket (Scheme)
-          li Nim
-          li Windows
-          
-        h3 Others
-        ul
-          li Analog / Digital Photography
-          li Photomanipulation
-          li Vector graphics
-          li Video editing
-          li Laser cutting (GRBL)
-          li Adwords / Adsense / Analytics
-          li Pharmacology / Biology
-          
-        h2
-          +anchor('languages')
-          | Languages
-        ul
-          li Native: Hungarian
-          li Advanced: English
-          li Basic: Spanish
-          
-        h2
-          +anchor('libraries-and-frameworks')
-          | Libraries and Frameworks
-        ul
-          li Django, Flask and AIOHTTP
-          li PyTest and Hypothesis
-          li BeautifulSoup, Selenium
-          li Pandas, Scikit-learn
-          li Wordpress, Drupal
-          li PHPUnit
-          li Shapely / Fiona
-          li OpenCV
-          li Arcpy
-          li Vue.js
-          
-          
-      .column
-        h2
-          +anchor('experience')
-          | Experience
-        ul
-          li Recommender systems
-          li
-            +tooltip('Machine learning')
-              | decision trees, neural nets,
-              br
-              | natural language analysis
-          li Data visualization / plots
-          li Data mining / webscraping
-          li Bioinformatics
-          li Chrome extensions
-          li Anki plugins
-          li
-            +tooltip('Project Euler')
-              | 951254_jAI9nTAjpXMOjMVTxGduFdADtBtdw95q
-          li
-            +tooltip('APIs')
-              | Last.fm, Reddit, Tumblr, Steem, Ebay, Flickr,
-              br
-              | Twitter, Instagram, Facebook, Google APIs
-          li Gephi
-        h3 Endless Flux Labs (2018-)
-        h3 Freelance projects (2016-2018)
-        
-        h2
-          +anchor('education')
-          | Education
-        h3 University
-        ul
-          li Semmelweis University, Pharmacology (2015)
-          li ELTE, Chemistry (2014)
-        h3 High School
-        h4 2009-2014: Szent László Gimnázium
-        ul
-          li 2012-2014: Informatics
-          li 2009-2012: Mass Communication
-        h4
-          +anchor('exit-exam-results')
-          | Exit Exam Results
-        input#show-exam-results.show-exam-results(type='checkbox')
-        label(for='show-exam-results')
-        table.exam-results
-          thead
-            tr
-              th(align='left') Subject
-              th(align='left') Level
-              th(align='right') %
-              th(align='right') Grade
-              th(align='right') Year
-              th(align='left') Comment
-          tbody
-            tr
-              td(align='left') Biology
-              td(align='left') advanced
-              td(align='right') 83
-              td(align='right') 5
-              td(align='right') 2015
-              td(align='left') required for SOTE Pharmacology
-            tr
-              td(align='left') Informatics
-              td(align='left') advanced
-              td(align='right') 86
-              td(align='right') 5
-              td(align='right') 2014
-              td(align='left') 100% verbal exam
-            tr
-              td(align='left') Chemistry
-              td(align='left') advanced
-              td(align='right') 68
-              td(align='right') 5
-              td(align='right') 2014
-              td(align='left') required for ELTE Chemistry
-            tr
-              td(align='left') English
-              td(align='left') basic
-              td(align='right') 92
-              td(align='right') 5
-              td(align='right') 2014
-              td(align='left') -
-            tr
-              td(align='left') Hungarian
-              td(align='left') basic
-              td(align='right') 91
-              td(align='right') 5
-              td(align='right') 2014
-              td(align='left') -
-            tr
-              td(align='left') Mathematics
-              td(align='left') basic
-              td(align='right') 81
-              td(align='right') 5
-              td(align='right') 2014
-              td(align='left') -
-            tr
-              td(align='left') History
-              td(align='left') basic
-              td(align='right') 65
-              td(align='right') 4
-              td(align='right') 2014
-              td(align='left') -
-        
-        h2 
-          +anchor('contact')
-          | Contact
-        p
-          a(href='tel:+36706325138')
-            +tooltip('Phone')
-              | +36 70 632 51 38
-          br
-          a(href='https://t.me/knockoutMice')
-            +tooltip('Telegram')
-              | knockoutMice
-          br
-          a(href='mailto:qwhexz@gmail.com')
-            +tooltip('Email')
-              | qwhexz@gmail.com
+      include pug/body-content.pug
