--- a/pug/section/experience.pug
+++ b/pug/section/experience.pug
@@ -1,20 +1,18 @@
 ul
+  li Full-stack web development
   li Recommender systems
+  li Chrome extensions
   li
     +tooltip('Machine learning')
       | decision trees, neural nets,
       br
       | natural language analysis
-  li Data visualization / plots
-  li Data mining / webscraping
-  li Social network analysis
+  li Data mining & visualization
   li
     +tooltip('APIs')
-      | Last.fm, Reddit, Tumblr, Steem, Ebay, Flickr,
+      | Facebook, Reddit, Tumblr, Twitter, Instagram,
       br
-      | Twitter, Instagram, Facebook, Google APIs
-  li Chrome extensions
-  li Anki plugins
-  li
-    +tooltip('Project Euler')
-      | 951254_jAI9nTAjpXMOjMVTxGduFdADtBtdw95q
+      | Ebay, Flickr, Last.fm, Google APIs
+  li 
+    +tooltip('Linux')
+      | Debian, Arch
