--- a/pug/section/libraries.pug
+++ b/pug/section/libraries.pug
@@ -1,9 +1,10 @@
 ul
-  li Django, Flask and AIOHTTP
-  li BeautifulSoup, Selenium
-  li PyTest, Hypothesis and PHPUnit
-  li Wordpress, Drupal
-  li Pandas and Scikit-learn
-  li Shapely, Fiona and Arcpy
+  li Django & Flask
+  li React/Redux & Vue.js
+  li Wordpress & Drupal
+  li BeautifulSoup
+  li Play with Slick 
+  li PyTest, Hypothesis & PHPUnit
+  li Pandas & Shapely
   li OpenCV
-  li Vue.js
+
