--- a/css/q.css
+++ b/css/q.css
@@ -45,10 +45,6 @@ body {
   }
 }
 
-td {
-  padding: .2rem;
-}
-
 h1,
 h2,
 h3,
@@ -56,32 +52,32 @@ h4,
 h5,
 h6 {
   font-family: "Open Sans Condensed", sans-serif;
-  font-weight: 100;
-  margin: 1rem 0;
+  font-weight: 200;
+  margin: 1rem 0 .5rem;
 }
 
 h6 {
-  font-size: 1rem;
+  font-size: 0.75rem;
 }
 
 h5 {
-  font-size: 1.25rem;
+  font-size: 1rem;
 }
 
 h4 {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
 }
 
 h3 {
-  font-size: 1.75rem;
+  font-size: 1.5rem;
 }
 
 h2 {
-  font-size: 2rem;
+  font-size: 1.75rem;
 }
 
 h1 {
-  font-size: 2.25rem;
+  font-size: 2rem;
 }
 
 a {
@@ -99,12 +95,19 @@ a:hover {
   background: #f71559;
 }
 
+td {
+  padding: .2rem;
+}
+
+ul {
+  list-style-type: circle;
+}
+
 .header {
   margin: 4rem auto 2rem;
   padding: 0 1rem;
   height: 200px;
   max-width: 58rem;
-  /* magic */
 }
 
 .main-content {
