--- a/css/src/q.scss
+++ b/css/src/q.scss
@@ -1,12 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Quicksand:300,400&subset=latin-ext');
-// @import url('https://fonts.googleapis.com/css?family=Oswald');
-// @import url('https://fonts.googleapis.com/css?family=Playfair+Display');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300');
 //@import url('https://fonts.googleapis.com/css?family=Alegreya+Sans:100');
 
 $main-font: 'Quicksand', sans-serif;
 $header-font: 'Open Sans Condensed', sans-serif;
-//$main-font: 'Alegreya Sans', sans-serif;
 
 $rich-black: #0a0d1d;
 $ghost-white: #f7fbfc;
@@ -16,6 +13,8 @@ $bg-avg: #161816;
 $funky-purple: #3a243b;
 
 $ease-in-out: cubic-bezier(.42, 0, .58, 1);
+
+$magic: 58rem;
 
 body {
   background-color: $bg-avg;
@@ -62,10 +61,6 @@ body {
   }
 }
 
-td {
-  padding: .2rem;
-}
-
 h1,
 h2,
 h3,
@@ -73,32 +68,32 @@ h4,
 h5,
 h6 {
   font-family: $header-font;
-  font-weight: 100;
-  margin: 1rem 0;
+  font-weight: 200;
+  margin: 1rem 0 .5rem;
 }
 
 h6 {
-  font-size: 1rem;
+  font-size: 0.75rem;
 }
 
 h5 {
-  font-size: 1.25rem;
+  font-size: 1rem;
 }
 
 h4 {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
 }
 
 h3 {
-  font-size: 1.75rem;
+  font-size: 1.5rem;
 }
 
 h2 {
-  font-size: 2rem;
+  font-size: 1.75rem;
 }
 
 h1 {
-  font-size: 2.25rem;
+  font-size: 2rem;
 }
 
 a {
@@ -116,11 +111,19 @@ a {
   background: $funky-magenta;
 }
 
+td {
+  padding: .2rem;
+}
+
+ul {
+  list-style-type: circle;
+}
+
 .header {
   margin: 4rem auto 2rem;
   padding: 0 1rem;
   height: 200px;
-  max-width: 58rem; /* magic */
+  max-width: $magic;
 }
 
 .main-content {
