--- a/pug/mixin/anchor.pug
+++ b/pug/mixin/anchor.pug
@@ -1,3 +1,5 @@
 mixin anchor(title)
-  a.anchor(href=`#${title}`, id=title aria-hidden='true')
-    span.section §
+  h1
+    a.anchor(href=`#${title.toLowerCase()}`, id=title.toLowerCase() aria-hidden='true')
+      span.section §
+    span= title
