--- a/pug/section/skills.pug
+++ b/pug/section/skills.pug
@@ -3,37 +3,33 @@ ul
   li Python
   li Javascript
   li PHP
-  li 
-    +tooltip('Linux')
-      | Debian, Arch
+  li Git
+  
 h3 Comfortable
 ul
-  li Git
   li
     +tooltip('SQL')
       | MySQL, PostgreSQL
   li 
-    +tooltip('Sass')
-      | CSS3 / HTML5
+    +tooltip('CSS')
+      | sass / HTML5
   li 
     +tooltip('Java')
       | Android
-  li MacOS
+  li Scala
+
 h3 Familiar
 ul
-  li 
-    +tooltip('Racket')
-      | Scheme
-  li R
+  li Rust
+  li Elm
   li C#
-  li Nim
-  li Windows
+  li C++
+  
 h3 Others
 ul
   li 
     +tooltip('Photography')
-      | Analog / Digital 
+      | Analog & Digital 
   li Photomanipulation
   li Vector graphics
-  li Adwords / Adsense / Analytics
-  li Pharmacology
+  li Adwords & Analytics
