--- a/pug/section/contact.pug
+++ b/pug/section/contact.pug
@@ -11,3 +11,7 @@ ul
     a(href='mailto:qwhexz@gmail.com')
       +tooltip('Email')
         | qwhexz@gmail.com
+  li
+    a(href='https://github.com/qwhex/')
+      +tooltip('GitHub')
+        | github/qwhex
