--- a/pug/section/experience.pug
+++ b/pug/section/experience.pug
@@ -9,7 +9,7 @@ ul
       | natural language analysis
   li Data mining & visualization
   li
-    +tooltip('APIs')
+    +tooltip('REST APIs')
       | Facebook, Reddit, Tumblr, Twitter, Instagram,
       br
       | Ebay, Flickr, Last.fm, Google APIs
