--- a/pug/section/libraries.pug
+++ b/pug/section/libraries.pug
@@ -1,5 +1,8 @@
 ul
-  li Django & Flask
+  li
+    +tooltip('Django')
+      | & Django Rest Framework
+  li Flask
   li React/Redux & Vue.js
   li Wordpress & Drupal
   li BeautifulSoup
