--- a/pug/section/contact.pug
+++ b/pug/section/contact.pug
@@ -1,17 +1,17 @@
 ul
   li
-    a(href='tel:+36706325138')
-      +tooltip('Phone')
-        | +36 70 632 51 38
-  li
-    a(href='https://t.me/knockoutMice', target='_blank')
-      +tooltip('Telegram')
-        | knockoutMice
-  li
     a(href='mailto:qwhexz@gmail.com')
       +tooltip('Email')
         | qwhexz@gmail.com
   li
+    a(href='https://t.me/knockoutMice', target='_blank')
+      +tooltip('Telegram')
+        | knockoutMice
+  li 
+    a(href='https://www.linkedin.com/in/mice-pápai/')
+      +tooltip('LinkedIn')
+        | https://www.linkedin.com/in/mice-pápai/
+  li
     a(href='https://github.com/qwhex/')
       +tooltip('GitHub')
-        | github/qwhex
+        | github.com/qwhex
