--- a/pug/section/education.pug
+++ b/pug/section/education.pug
@@ -1,7 +1,14 @@
 h3 University
 ul
-  li Semmelweis University, Pharmacology (2015)
-  li ELTE, Chemistry (2014)
+  li
+    | SOTE, Pharmacology
+    +tooltip(' (2015)')
+      | Unfinished, because I started working as a freelance developer
+  li
+    | ELTE, Chemistry
+    +tooltip(' (2014)')
+      | Switched to SOTE a year later
+
 h3 High School
 h4 Szent László Gimnázium (2009-2014)
 ul
