--- a/pug/section/experience.pug
+++ b/pug/section/experience.pug
@@ -2,17 +2,13 @@ ul
   li Full-stack web development
   li Recommender systems
   li Chrome extensions
-  li
-    +tooltip('Machine learning')
-      | decision trees, neural nets,
-      br
-      | natural language analysis
   li Data mining & visualization
+  li Natural language processing
   li
     +tooltip('REST APIs')
-      | Facebook, Reddit, Tumblr, Twitter, Instagram,
+      | Facebook, Reddit, Tumblr, Instagram,
       br
       | Ebay, Flickr, Last.fm, Google APIs
-  li 
-    +tooltip('Linux')
-      | Debian, Arch
+  li
+    +tooltip('Machine learning')
+      | genetic algorithms, neural nets
