--- a/pug/section/skills.pug
+++ b/pug/section/skills.pug
@@ -1,29 +1,33 @@
 h3 Proficient
 ul
   li Python
-  li Javascript
+  li 
+    +tooltip('JavaScript')
+      | ES6+
   li PHP
-  li Git
-  
+  li
+    +tooltip('Git')
+      | I know it's not a programming language
+
 h3 Comfortable
 ul
-  li
-    +tooltip('SQL')
-      | MySQL, PostgreSQL
-  li 
-    +tooltip('CSS')
-      | sass / HTML5
   li 
     +tooltip('Java')
       | Android
-  li Scala
+  li Rust
+  li
+    +tooltip('SQL')
+      | PostgreSQL, MySQL
+  li 
+    +tooltip('CSS')
+      | sass / HTML5
 
 h3 Familiar
 ul
-  li Rust
-  li Elm
+  li Scala
   li C#
-  li C++
+  li Elm
+  li R
   
 h3 Others
 ul
@@ -31,5 +35,4 @@ ul
     +tooltip('Photography')
       | Analog & Digital 
   li Photomanipulation
-  li Vector graphics
   li Adwords & Analytics
