--- a/pug/section/libraries.pug
+++ b/pug/section/libraries.pug
@@ -3,11 +3,12 @@ ul
     +tooltip('Django')
       | & Django Rest Framework
   li Flask
-  li React/Redux & Vue.js
-  li Wordpress & Drupal
   li BeautifulSoup
-  li Play with Slick 
-  li PyTest, Hypothesis & PHPUnit
-  li Pandas & Shapely
+  li Wordpress & Drupal
+  li 
+    +tooltip('NLTK')
+      | Natural Language Toolkit
+  li Hypothesis, Pytest
+  li Selenium
   li OpenCV
 
