--- a/pug/section/contact.pug
+++ b/pug/section/contact.pug
@@ -10,8 +10,14 @@ ul
   li 
     a(href='https://www.linkedin.com/in/mice-pápai/')
       +tooltip('LinkedIn')
-        | https://www.linkedin.com/in/mice-pápai/
+        | linkedin.com/in/mice-pápai/
   li
     a(href='https://github.com/qwhex/')
       +tooltip('GitHub')
         | github.com/qwhex
+
+  li(class='print-only')
+    a(href='https://qwhex.github.io')
+      +tooltip('Web version of this page')
+        | qwhex.github.io
+
