--- a/pug/section/skills.pug
+++ b/pug/section/skills.pug
@@ -5,9 +5,7 @@ ul
     +tooltip('JavaScript')
       | ES6+
   li PHP
-  li
-    +tooltip('Git')
-      | I know it's not a programming language
+  li Git
 
 h3 Comfortable
 ul
@@ -20,7 +18,7 @@ ul
       | PostgreSQL, MySQL
   li 
     +tooltip('CSS')
-      | sass / HTML5
+      | HTML5 / sass 
 
 h3 Familiar
 ul
