--- a/pug/head.pug
+++ b/pug/head.pug
@@ -1,5 +1,15 @@
 meta(charset='utf-8')
 meta(name='viewport', content='width=device-width, initial-scale=1')
-title Mice Pápai CV
+meta(name='revised', content=revised)
+meta(name='revision', content=revision)
+meta(name='revisit-after', content='30 days')
+meta(name='subject', content='Mice Pápai - Software Engineer - CV / Resume')
+meta(name='author', content='Mice István Pápai, ' + email)
+meta(name='reply-to', content=email)
+
+//- TODO: add generated open graph tags
+
+title Mice Pápai - Software Engineer
+
 include partial/favicons.pug
 include partial/includes.pug
