--- a/pug/partial/includes.pug
+++ b/pug/partial/includes.pug
@@ -1,3 +1,15 @@
-link(rel='stylesheet', type='text/css', href='//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css')
-script(src='//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js')
+link(
+    rel='stylesheet' 
+    type='text/css'
+    href='//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.1/cookieconsent.min.css'
+    integrity='sha256-zQ0LblD/Af8vOppw18+2anxsuaz3pWYyVWi+bTvTH8Q='
+    crossorigin='anonymous'
+)
+script(
+    src='//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.1/cookieconsent.min.js'
+    integrity='sha256-5VhCqFam2Cn+yjw61zbBNrbHVJ6SRydPeKopYlngbiQ='
+    crossorigin='anonymous'
+)
+
+//- own scripts
 script(src='js/cookie.js')
