--- a/pug/section/libraries.pug
+++ b/pug/section/libraries.pug
@@ -2,12 +2,15 @@ ul
   li
     +tooltip('Django')
       | & Django Rest Framework
+  li
+    +tooltip('React')
+      | & Redux
   li Flask
-  li BeautifulSoup
   li Wordpress & Drupal
   li 
     +tooltip('NLTK')
       | Natural Language Toolkit
+  li BeautifulSoup
   li Hypothesis, Pytest
   li Selenium
   li OpenCV
