--- a/pug/section/skills.pug
+++ b/pug/section/skills.pug
@@ -1,34 +1,38 @@
 h3 Proficient
 ul
-  li Python
   li 
     +tooltip('JavaScript')
       | ES6+
+  li Python
   li PHP
-  li Git
+  li 
+    +tooltip('CSS')
+      | sass 
 
 h3 Comfortable
 ul
-  li 
-    +tooltip('Java')
-      | Android
-  li Rust
   li
     +tooltip('SQL')
       | PostgreSQL, MySQL
+  li Rust
+  li Elm
   li 
-    +tooltip('CSS')
-      | HTML5 / sass 
+    +tooltip('Java')
+      | Android
 
 h3 Familiar
 ul
   li Scala
   li C#
-  li Elm
+  li Nim
   li R
   
 h3 Others
 ul
+  li 
+    +tooltip('Translation')
+      +blanka('https://gengo.com/hire/profile/118722/')(style='color: white;')
+        | English -> Hungarian
   li 
     +tooltip('Photography')
       | Analog & Digital 
