--- a/pug/section/contact.pug
+++ b/pug/section/contact.pug
@@ -1,18 +1,18 @@
 ul
   li
-    a(href='mailto:qwhexz@gmail.com')
+    a(href='mailto:' + email)
       +tooltip('Email')
-        | qwhexz@gmail.com
+        | #{email}
   li
-    a(href='https://t.me/knockoutMice', target='_blank')
+    +blanka('https://t.me/knockoutMice')
       +tooltip('Telegram')
         | knockoutMice
   li 
-    a(href='https://www.linkedin.com/in/mice-pápai/')
+    +blanka('https://www.linkedin.com/in/mice-pápai/')
       +tooltip('LinkedIn')
         | linkedin.com/in/mice-pápai/
   li
-    a(href='https://github.com/qwhex/')
+    +blanka('https://github.com/qwhex/')
       +tooltip('GitHub')
         | github.com/qwhex
 
