--- a/pug/section/work.pug
+++ b/pug/section/work.pug
@@ -1,4 +1,15 @@
 ul
-  li RoadRecord (2018-2019)
-  li Endless Flux Labs (2018)
-  li Freelance projects (2015-2018)
+  li 
+    +tooltip('Vacuumlabs (2019-)')
+      | Node/React Full-Stack Developer
+  li 
+    +tooltip('RoadRecord (2018-2019)')
+      | Python Backend Developer
+  li 
+    +tooltip('Endless Flux Labs (2018)')
+      | PHP/JS Full-Stack Developer
+  li 
+    +tooltip('Freelance projects (2015-2018)')
+      | Various 1-2 week long projects
+      br
+      | mostly in Python, Java and R
