--- a/pug/head.pug
+++ b/pug/head.pug
@@ -4,7 +4,7 @@ meta(name='revised', content=revised)
 meta(name='revision', content=revision)
 meta(name='revisit-after', content='30 days')
 meta(name='subject', content='Mice Pápai - Software Engineer - CV / Resume')
-meta(name='author', content='Mice István Pápai, ' + email)
+meta(name='author', content='Mice Pápai, ' + email)
 meta(name='reply-to', content=email)
 
 //- TODO: add generated open graph tags
@@ -12,4 +12,4 @@ meta(name='reply-to', content=email)
 title Mice Pápai - Software Engineer
 
 include partial/favicons.pug
-include partial/includes.pug
+//- include partial/includes.pug
