--- a/pug/section/contact.pug
+++ b/pug/section/contact.pug
@@ -17,7 +17,7 @@ ul
         | github.com/qwhex
 
   li(class='print-only')
-    a(href='https://qwhex.github.io')
+    a(href='https://micepapai.com')
       +tooltip('Web version of this page')
-        | qwhex.github.io
+        | micepapai.com
 
