--- a/pug/section/experience.pug
+++ b/pug/section/experience.pug
@@ -4,11 +4,12 @@ ul
   li Chrome extensions
   li Data mining & visualization
   li Natural language processing
+  li Cryptocurrencies
+  li
+    +tooltip('Machine learning')
+      | genetic algorithms, neural nets
   li
     +tooltip('REST APIs')
       | Facebook, Reddit, Tumblr, Instagram,
       br
       | Ebay, Flickr, Last.fm, Google APIs
-  li
-    +tooltip('Machine learning')
-      | genetic algorithms, neural nets
