--- a/pug/section/libraries.pug
+++ b/pug/section/libraries.pug
@@ -1,12 +1,11 @@
 ul
   li
     +tooltip('Django')
-      | & Django Rest Framework
+      | & Django REST Framework
   li
     +tooltip('React')
-      | & Redux
+      | + Redux, Jest and related tools
   li Flask
-  li Wordpress & Drupal
   li 
     +tooltip('NLTK')
       | Natural Language Toolkit
