--- a/pug/section/skills.pug
+++ b/pug/section/skills.pug
@@ -1,40 +1,40 @@
 h3 Proficient
 ul
-  li 
-    +tooltip('JavaScript')
-      | ES6+
-  li Python
-  li PHP
-  li 
+  li
+    +tooltip('Typescript')
+      | and JavaScript/ES6+
+  li
     +tooltip('CSS')
-      | sass 
-
-h3 Comfortable
-ul
+      | sass
+  li Python
   li
     +tooltip('SQL')
       | PostgreSQL, MySQL
-  li Rust
+h3 Comfortable
+ul
   li Elm
+  li Rust
   li 
     +tooltip('Java')
       | Android
+  li PHP
 
 h3 Familiar
 ul
+  li Clojure
   li Scala
-  li C#
   li Nim
   li R
   
 h3 Others
 ul
-  li 
+  li
+    +tooltip('Photography')
+      +blanka('https://www.instagram.com/micepapai/')(style='color: white;')
+        | Analog & Digital
+  li Photomanipulation
+  li
     +tooltip('Translation')
       +blanka('https://gengo.com/hire/profile/118722/')(style='color: white;')
         | English -> Hungarian
-  li 
-    +tooltip('Photography')
-      | Analog & Digital 
-  li Photomanipulation
   li Adwords & Analytics
