--- a/css/src/q.scss
+++ b/css/src/q.scss
@@ -13,12 +13,15 @@ $ghost-white: #f7fbfc;
 
 $funky-magenta: #f71559;
 $funky-purple: #3a243b;
+$dark-funky-purple: #1b091c;
 
 $ease-in-out: cubic-bezier(0.42, 0, 0.58, 1);
 $fast-transition: 250ms $ease-in-out;
 
-$column-width: 24rem;
 $padding-basic: 1rem;
+$spacing-basic: 4rem;
+
+$column-width: 20rem;
 $column-count: 2;
 $content-width: ($column-count * $column-width) +
   ($column-count * $padding-basic * 2);
@@ -31,6 +34,7 @@ body {
   font-size: 14px;
   font-weight: 300;
   line-height: 1.5;
+  backdrop-filter: blur(10px);
 }
 
 @media only screen and (min-width: 320px) {
@@ -127,47 +131,65 @@ ul {
   background: $funky-magenta;
 }
 
-/*
-  Classes
-*/
-
-.header {
-  margin: 4rem auto 2rem;
-  padding: 0 $padding-basic;
-  height: 200px;
+.wrapper {
   max-width: $content-width;
-}
-
-.main-content {
   margin: 0 auto;
-  max-width: $content-width;
-}
+  padding-bottom: $spacing-basic;
 
-.column {
-  width: $column-width;
-  margin: 0 0 4rem;
-  padding: 0 $padding-basic;
-  float: left;
-}
+  .header {
+    height: 200px;
+    padding: $spacing-basic $padding-basic 2rem;
 
-@media only screen and (max-width: 1000px) {
-  .column {
-    width: 20rem;
-    margin: 0;
+    .portrait {
+      margin: 0;
+      border-radius: 50%;
+      width: 200px;
+      height: 200px;
+      float: left;
+    }
+    
+    .title {
+      left: 2rem;
+      height: 125px;
+      width: 10rem;
+      vertical-align: middle;
+      float: left;
+      position: relative;
+      margin: 0;
+      padding-top: 75px;
+    }
+  }
+  
+  .main-content {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: $spacing-basic;
+
+    .column {
+      margin: 0;
+      padding: 0 $padding-basic;
+
+      @media only screen and (max-width: 1000px) {
+        & {
+          width: 20rem;
+          margin: 0;
+        }
+      }
+    }
   }
 }
 
 // toggle
 
-.exam-results {
+.toggle-content {
   display: none;
 }
 
-.show-exam-results {
+.show-toggle-content {
   display: none;
 }
 
-.show-exam-results:checked ~ .exam-results {
+.show-toggle-content:checked ~ .toggle-content {
   display: block;
 }
 
@@ -180,7 +202,7 @@ label::before {
   content: 'Show';
 }
 
-.show-exam-results:checked + label::before {
+.show-toggle-content:checked + label::before {
   content: 'Hide';
 }
 
@@ -191,24 +213,6 @@ label {
   text-decoration: none;
   cursor: pointer;
   margin: 1rem 0;
-}
-
-.portrait {
-  padding: 0 $padding-basic;
-  border-radius: 50%;
-  height: 200px;
-  float: left;
-}
-
-.title {
-  left: 2rem;
-  height: 125px;
-  width: 10rem;
-  vertical-align: middle;
-  float: left;
-  position: relative;
-  margin: 0;
-  padding-top: 75px;
 }
 
 // tooltip
@@ -228,10 +232,10 @@ span.tooltip {
 
     font-size: 0.8rem;
     color: $ghost-white;
-    border: 1px solid $bg-avg;
+    border: 1px solid $rich-black;
     border-radius: 4px;
-    background-color: $funky-purple;
-    box-shadow: 0.2rem 0.2rem 0.4rem $bg-avg;
+    background-color: $dark-funky-purple;
+    box-shadow: 0.2rem 0.2rem 0.4rem $rich-black;
     transition: opacity $fast-transition;
   }
 
@@ -263,26 +267,39 @@ span.tooltip {
 // mobile
 
 @media only screen and (max-width: 768px) {
-  .header {
-    height: 100px;
-  }
+  .wrapper {
+    max-width: 100vw;
+    overflow: hidden;
+    margin: 0 1rem;
+    padding-bottom: 4rem;
+    font-weight: 400;
 
-  .portrait {
-    height: 100px;
-  }
+    .header {
+      height: 100px;
 
-  .title {
-    height: 63px;
-    padding-top: 37px;
-  }
+      .portrait {
+        height: 100px;
+        width: 100px;
+      }
 
-  span.tooltip span {
-    display: none;
+      .title {
+        height: 63px;
+        padding-top: 37px;
+      }
+    }
+
+    .main-content {
+      grid-template-columns: 1fr;
+    }
+
+    span.tooltip span {
+      display: none;
+    }
   }
 }
 
 /*
-  Print & pdf export support
+  Print & PDF export support
 */
 
 $print-text-color: #000;
@@ -298,11 +315,12 @@ $print-bg-color: #fff;
     background-image: none;
     color: $print-text-color;
     font-weight: 400;
-    font-size: 14px;
+    font-size: 12px;
   }
 
   a {
     color: $print-text-color !important;
+    text-decoration: underline;
 
     &:hover {
       color: $print-text-color;
@@ -314,32 +332,26 @@ $print-bg-color: #fff;
     // }
   }
 
-  .main-content,
-  .header {
-    width: 90%;
-    max-width: 60rem;
-    margin: 1rem auto;
-    padding: 0;
-  }
+  .wrapper {
+    .header {
+      height: 150px;
 
-  .header {
-    height: 150px;
-  }
+      .portrait {
+        height: 150px;
+      }
 
-  .title {
-    height: 95px;
-    padding-top: 55px;
-  }
+      .title {
+        height: 95px;
+        padding-top: 55px;
+      }
+    }
 
-  .portrait {
-    height: 150px;
-  }
-
-  .column {
-    width: 22rem;
-    margin: 0 0 4rem;
-    padding: 0 $padding-basic;
-    float: left;
+    .column {
+      width: 22rem;
+      margin: 0;
+      padding: 0 $padding-basic;
+      float: left;
+    }
   }
 
   span.tooltip {
