--- a/pug/index.pug
+++ b/pug/index.pug
@@ -7,7 +7,8 @@ html(lang='en')
   head
     include head.pug
   body
-    .header
-      include body-header.pug
-    .main-content
-      include body-content.pug
+    .wrapper
+      .header
+        include body-header.pug
+      .main-content
+        include body-content.pug
